--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="css/dataTables.bootstrap5.min.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Frontendfunn - Bootstrap 5 Admin Dashboard Template</title>
+    <title>WAD</title>
   </head>
   <body>
     <!-- top navigation bar -->
@@ -28,8 +28,7 @@
         </button>
         <a
           class="navbar-brand me-auto ms-lg-0 ms-3 text-uppercase fw-bold"
-          href="#"
-          >Frontendfunn</a
+          href="#">Practical 1 Dashboard</a
         >
         <button
           class="navbar-toggler"
